# simple-music-uploader

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  run.sh
app/: main.py
app/templates/: index.html
