[project]
name = "simple-music-uploader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.128.2",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
]

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true